--- a/challenge/module1-lecture5/style.css
+++ b/challenge/module1-lecture5/style.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    color: #5a5a5a;
+    text-decoration: none;
+}
+
 body {
     display: flex;
     margin: 0;
@@ -11,41 +22,42 @@ img {
     cursor: pointer;
 }
 
-.main {
+.content {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    padding: 50px;
+    align-content: flex-start;
+}
+
+.content-thumbnail {
     width: 100%;
 }
 
-.topbar {
-    height: 8vh;
+.content-info {
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
-.content {
-    height: 100%;
+.content-info > img {
+    width: 15%;
 }
 
-.icon {
-    height: 8vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0 2em;
-    cursor: pointer;
+.content-title {
+    margin: 5px;
+    margin-left: 20px;
+    height: 40%;
 }
 
-.icon p {
-    margin: 0;
-}
-
-.icon:not(:first-of-type) {
-    height: 16vh;
+.content-title > p {
+    margin-top: 0;
 }
 
 .logo {
-    height: 50%;
+    height: 2.2rem;
+    margin: -20px 20px 0;
 }
 
 .icons-wrapper {
@@ -58,6 +70,66 @@ img {
 .flex-div {
     align-items: center;
     display: flex;
+}
+
+.short a {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    width: fit-content;
+}
+
+.sidebar {
+    background: #fff;
+    height: 100%;
+    overflow: auto;
+    padding-left: 2%;
+    padding-top: 80px;
+    top: 0;
+}
+
+.sidebar .short a i {
+    height: 30px;
+    margin-right: 20px;
+    width: 30px;
+}
+
+.short a:first-child {
+    color: red;
+
+}
+
+.sidebar hr {
+    background: #ccc;
+    border: 0;
+    height: 1px;
+
+}
+
+.nav {
+    background-color: #fff;
+    justify-content: space-between;
+    padding: 10px 2%;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+.nav-right i {
+    cursor: pointer;
+    margin-right: 1.5625rem;
+    width: 0.625rem;
+}
+
+.nav-right {
+    margin-right: 7.5rem;
+    width: 0.4375rem;
+}
+
+.nav-left .menu {
+    margin-right: 1.5625rem;
+    width: 0.375rem;
 
 }
 
@@ -85,50 +157,9 @@ img {
     cursor: pointer;
 }
 
-.nav-right {
-    margin-right: 3.5rem;
-}
-
-.nav-right i {
-    cursor: pointer;
-    margin-right: 1.5625rem;
-    width: 0.625rem;
-}
-
-.content {
-    margin-top: 10px;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 10px;
-    padding: 10px;
-    align-content: flex-start;
-}
-
-.content-thumbnail {
-    width: 100%;
-}
-
-.content-info {
-    display: flex;
-    align-items: center;
-}
-
-.content-info > img {
-    width: 15%;
-}
-
-.content-title {
-    margin: 5px;
-    margin-left: 20px;
-    height: 40%;
-}
-
-.content-title > p {
-    margin-top: 0;
-}
-
 .user {
     border-radius: 50%;
     margin-right: 0;
     width: 2.8125rem;
+    
 }
