--- a/challenge/module1-lecture5/style.css
+++ b/challenge/module1-lecture5/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,60 +9,13 @@ a {
     text-decoration: none;
 }
 
+.active {
+    color: #fff;
+    background: #242424;
+}
+
 body {
-    display: flex;
-    margin: 0;
-    height: 100vh;
     font-family: 'Roboto', sans-serif;
-}
-
-img {
-    cursor: pointer;
-}
-
-.content {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 10px;
-    padding: 50px;
-    align-content: flex-start;
-}
-
-.content-thumbnail {
-    width: 100%;
-}
-
-.content-info {
-    display: flex;
-    align-items: center;
-}
-
-.content-info > img {
-    width: 15%;
-}
-
-.content-title {
-    margin: 5px;
-    margin-left: 20px;
-    height: 40%;
-}
-
-.content-title > p {
-    margin-top: 0;
-}
-
-.logo {
-    height: 2.2rem;
-    margin: -20px 20px 0;
-}
-
-.icons-wrapper {
-    display: flex;
-    align-items: center;
-    margin-right: 7.5rem;
-    width: 0.4375rem;
 }
 
 .flex-div {
@@ -72,39 +23,50 @@ img {
     display: flex;
 }
 
-.short a {
+.main {
+    display: flex;
+}
+
+.foot {
+    color: #5a5a5a;
+    size: 0.2rem;
+}
+
+.foot small {
+    cursor: pointer;
+}
+
+img {
+    cursor: pointer;
+
+}
+
+.logo {
+    height: 2.2rem;
+    margin: -4px 20px 0;
+}
+
+.mic {
+    width: 6rem;
+}
+
+.more a i {
+    height: 30px;
+    margin-right: 5px;
+    width: 30px;
+}
+
+.more a {
     align-items: center;
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 10px;
+    margin-top: 10px;
     width: fit-content;
 }
 
-.sidebar {
-    background: #fff;
-    height: 100%;
-    overflow: auto;
-    padding-left: 2%;
-    padding-top: 80px;
-    top: 0;
-}
-
-.sidebar .short a i {
-    height: 30px;
-    margin-right: 20px;
-    width: 30px;
-}
-
-.short a:first-child {
-    color: red;
-
-}
-
-.sidebar hr {
-    background: #ccc;
-    border: 0;
-    height: 1px;
-
+.more a p {
+    margin-top: 0.5rem;
 }
 
 .nav {
@@ -138,7 +100,6 @@ img {
     border-radius: 1.875rem;
     margin-right: 0.9375rem;
     padding: 0.5rem 0.75rem;
-
 }
 
 .nav-middle .search input {
@@ -146,20 +107,111 @@ img {
     border: 0;
     outline: 0;
     width: 25rem;
+}
+
+.subscribe a {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    width: fit fit-content;
+}
+
+.subscribe a p {
+    margin: 10px 15px;
 
 }
 
-.top-icon {
-    font-size: 2em;
-    padding: 0 0.5em;
-    height: 40px;
-    width: 40px;
-    cursor: pointer;
+.subscribe a img {
+    border-radius: 50%;
+    margin: 0;
+    margin-right: 5px;
+    width: 37px;
+}
+
+
+.short a {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    width: fit-content;
+}
+
+.sidebar {
+    background: #fff;
+    height: 100%;
+    overflow: auto;
+    padding-left: 2%;
+    padding-top: 20px;
+    position: relative;
+    top: 0;
+    width: 18%;
+}
+
+.sidebar .short a i {
+    height: 30px;
+    margin-right: 20px;
+    width: 30px;
+
+}
+
+.short a:first-child {
+    color: red;
+
+}
+
+.sidebar hr {
+    background: #ccc;
+    border: 0;
+    height: 1px;
+}
+
+.title {
+    height: 45px;
+    overflow: hidden;
+    width: 100%;
 }
 
 .user {
     border-radius: 50%;
     margin-right: 0;
     width: 2.8125rem;
-    
+
+}
+
+.content {
+    height: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    margin-top: -1rem;
+    padding-top: 20px;
+}
+
+.content-thumbnail {
+    width: 100%;
+    margin-left: auto;
+    object-fit: cover;
+    padding: 5px;
+}
+
+.content-info {
+    display: flex;
+    align-items: center;
+}
+
+.content-info > img {
+    width: 15%;
+}
+
+.content-title {
+    margin: 5px;
+    margin-left: 20px;
+    height: 40%;
+}
+
+.content-title > p {
+    margin-top: 0;
 }
